--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,6 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 <app-header></app-header>
-
-
-
+<app-root></app-root>
+<app-detail></app-detail>
 <app-footer></app-footer>
