--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,1 @@
-<h3> Parvinder Kaur &copy;</h3>
+<h3> {{currStudent.sid}} / {{currStudent.sname}} / {{currStudent.slogin}} / {{currStudent.scampus}}</h3>
